NSPredicateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from NSPredicate.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class NSPredicateParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, TRUE_PREDICATE=16, 
		FALSE_PREDICATE=17, AND=18, OR=19, NOT=20, EQUAL=21, NOT_EQUAL=22, LESS_THAN=23, 
		GREATER_THAN=24, LESS_THAN_OR_EQUAL=25, GREATER_THAN_OR_EQUAL=26, BETWEEN=27, 
		CONTAINS=28, IN=29, BEGINS_WITH=30, ENDS_WITH=31, LIKE=32, MATCHES=33, 
		ANY=34, ALL=35, NONE=36, SOME=37, NULL=38, TRUE=39, FALSE=40, SELF=41, 
		FIRST=42, LAST=43, SIZE=44, SUBQUERY=45, ASSIGN=46, STRING=47, DOUBLE_QUOTED_STRING=48, 
		SINGLE_QUOTED_STRING=49, FORMAT=50, NUMBER=51, IDENTIFIER=52, WS=53;
	public const int
		RULE_predicate = 0, RULE_comparison_predicate = 1, RULE_unqualified_comparison_predicate = 2, 
		RULE_operator = 3, RULE_operator_with_options = 4, RULE_operator_type = 5, 
		RULE_expression = 6, RULE_index = 7, RULE_value_expression = 8, RULE_expression_list = 9, 
		RULE_variable = 10;
	public static readonly string[] ruleNames = {
		"predicate", "comparison_predicate", "unqualified_comparison_predicate", 
		"operator", "operator_with_options", "operator_type", "expression", "index", 
		"value_expression", "expression_list", "variable"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'['", "']'", "'-'", "'**'", "'*'", "'/'", "'+'", 
		"','", "'@'", "'.'", "'{'", "'}'", "'$'", "'TRUEPREDICATE'", "'FALSEPREDICATE'", 
		null, null, null, null, null, "'<'", "'>'", "'<='", "'>='", null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "':='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "TRUE_PREDICATE", "FALSE_PREDICATE", "AND", "OR", 
		"NOT", "EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", "LESS_THAN_OR_EQUAL", 
		"GREATER_THAN_OR_EQUAL", "BETWEEN", "CONTAINS", "IN", "BEGINS_WITH", "ENDS_WITH", 
		"LIKE", "MATCHES", "ANY", "ALL", "NONE", "SOME", "NULL", "TRUE", "FALSE", 
		"SELF", "FIRST", "LAST", "SIZE", "SUBQUERY", "ASSIGN", "STRING", "DOUBLE_QUOTED_STRING", 
		"SINGLE_QUOTED_STRING", "FORMAT", "NUMBER", "IDENTIFIER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "NSPredicate.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public NSPredicateParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class PredicateContext : ParserRuleContext {
		public PredicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicate; } }
	 
		public PredicateContext() { }
		public virtual void CopyFrom(PredicateContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PredicateNotContext : PredicateContext {
		public ITerminalNode NOT() { return GetToken(NSPredicateParser.NOT, 0); }
		public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public PredicateNotContext(PredicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterPredicateNot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitPredicateNot(this);
		}
	}
	public partial class PredicateTrueContext : PredicateContext {
		public ITerminalNode TRUE_PREDICATE() { return GetToken(NSPredicateParser.TRUE_PREDICATE, 0); }
		public PredicateTrueContext(PredicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterPredicateTrue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitPredicateTrue(this);
		}
	}
	public partial class PredicateComparisonContext : PredicateContext {
		public Comparison_predicateContext comparison_predicate() {
			return GetRuleContext<Comparison_predicateContext>(0);
		}
		public PredicateComparisonContext(PredicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterPredicateComparison(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitPredicateComparison(this);
		}
	}
	public partial class PredicateOrContext : PredicateContext {
		public PredicateContext[] predicate() {
			return GetRuleContexts<PredicateContext>();
		}
		public PredicateContext predicate(int i) {
			return GetRuleContext<PredicateContext>(i);
		}
		public ITerminalNode OR() { return GetToken(NSPredicateParser.OR, 0); }
		public PredicateOrContext(PredicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterPredicateOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitPredicateOr(this);
		}
	}
	public partial class PredicateParensContext : PredicateContext {
		public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public PredicateParensContext(PredicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterPredicateParens(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitPredicateParens(this);
		}
	}
	public partial class PredicateFalseContext : PredicateContext {
		public ITerminalNode FALSE_PREDICATE() { return GetToken(NSPredicateParser.FALSE_PREDICATE, 0); }
		public PredicateFalseContext(PredicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterPredicateFalse(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitPredicateFalse(this);
		}
	}
	public partial class PredicateAndContext : PredicateContext {
		public PredicateContext[] predicate() {
			return GetRuleContexts<PredicateContext>();
		}
		public PredicateContext predicate(int i) {
			return GetRuleContext<PredicateContext>(i);
		}
		public ITerminalNode AND() { return GetToken(NSPredicateParser.AND, 0); }
		public PredicateAndContext(PredicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterPredicateAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitPredicateAnd(this);
		}
	}

	[RuleVersion(0)]
	public PredicateContext predicate() {
		return predicate(0);
	}

	private PredicateContext predicate(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		PredicateContext _localctx = new PredicateContext(Context, _parentState);
		PredicateContext _prevctx = _localctx;
		int _startState = 0;
		EnterRecursionRule(_localctx, 0, RULE_predicate, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				_localctx = new PredicateNotContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 23; Match(NOT);
				State = 24; predicate(4);
				}
				break;
			case 2:
				{
				_localctx = new PredicateComparisonContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 25; comparison_predicate();
				}
				break;
			case 3:
				{
				_localctx = new PredicateTrueContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 26; Match(TRUE_PREDICATE);
				}
				break;
			case 4:
				{
				_localctx = new PredicateFalseContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 27; Match(FALSE_PREDICATE);
				}
				break;
			case 5:
				{
				_localctx = new PredicateParensContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 28; Match(T__0);
				State = 29; predicate(0);
				State = 30; Match(T__1);
				}
				break;
			}
			Context.Stop = TokenStream.Lt(-1);
			State = 42;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 40;
					switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
					case 1:
						{
						_localctx = new PredicateAndContext(new PredicateContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_predicate);
						State = 34;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 35; Match(AND);
						State = 36; predicate(7);
						}
						break;
					case 2:
						{
						_localctx = new PredicateOrContext(new PredicateContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_predicate);
						State = 37;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 38; Match(OR);
						State = 39; predicate(6);
						}
						break;
					}
					} 
				}
				State = 44;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Comparison_predicateContext : ParserRuleContext {
		public Comparison_predicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparison_predicate; } }
	 
		public Comparison_predicateContext() { }
		public virtual void CopyFrom(Comparison_predicateContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ComparisonPredicateSomeContext : Comparison_predicateContext {
		public ITerminalNode SOME() { return GetToken(NSPredicateParser.SOME, 0); }
		public Unqualified_comparison_predicateContext unqualified_comparison_predicate() {
			return GetRuleContext<Unqualified_comparison_predicateContext>(0);
		}
		public ComparisonPredicateSomeContext(Comparison_predicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterComparisonPredicateSome(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitComparisonPredicateSome(this);
		}
	}
	public partial class ComparisonPredicateAnyContext : Comparison_predicateContext {
		public ITerminalNode ANY() { return GetToken(NSPredicateParser.ANY, 0); }
		public Unqualified_comparison_predicateContext unqualified_comparison_predicate() {
			return GetRuleContext<Unqualified_comparison_predicateContext>(0);
		}
		public ComparisonPredicateAnyContext(Comparison_predicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterComparisonPredicateAny(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitComparisonPredicateAny(this);
		}
	}
	public partial class ComparisonPredicateNoneContext : Comparison_predicateContext {
		public ITerminalNode NONE() { return GetToken(NSPredicateParser.NONE, 0); }
		public Unqualified_comparison_predicateContext unqualified_comparison_predicate() {
			return GetRuleContext<Unqualified_comparison_predicateContext>(0);
		}
		public ComparisonPredicateNoneContext(Comparison_predicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterComparisonPredicateNone(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitComparisonPredicateNone(this);
		}
	}
	public partial class ComparisonPredicateUnqualifiedContext : Comparison_predicateContext {
		public Unqualified_comparison_predicateContext unqualified_comparison_predicate() {
			return GetRuleContext<Unqualified_comparison_predicateContext>(0);
		}
		public ComparisonPredicateUnqualifiedContext(Comparison_predicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterComparisonPredicateUnqualified(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitComparisonPredicateUnqualified(this);
		}
	}
	public partial class ComparisonPredicateAllContext : Comparison_predicateContext {
		public ITerminalNode ALL() { return GetToken(NSPredicateParser.ALL, 0); }
		public Unqualified_comparison_predicateContext unqualified_comparison_predicate() {
			return GetRuleContext<Unqualified_comparison_predicateContext>(0);
		}
		public ComparisonPredicateAllContext(Comparison_predicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterComparisonPredicateAll(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitComparisonPredicateAll(this);
		}
	}

	[RuleVersion(0)]
	public Comparison_predicateContext comparison_predicate() {
		Comparison_predicateContext _localctx = new Comparison_predicateContext(Context, State);
		EnterRule(_localctx, 2, RULE_comparison_predicate);
		try {
			State = 54;
			switch (TokenStream.La(1)) {
			case T__0:
			case T__4:
			case T__10:
			case T__12:
			case T__14:
			case NULL:
			case TRUE:
			case FALSE:
			case SELF:
			case SUBQUERY:
			case STRING:
			case FORMAT:
			case NUMBER:
			case IDENTIFIER:
				_localctx = new ComparisonPredicateUnqualifiedContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 45; unqualified_comparison_predicate();
				}
				break;
			case ANY:
				_localctx = new ComparisonPredicateAnyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 46; Match(ANY);
				State = 47; unqualified_comparison_predicate();
				}
				break;
			case SOME:
				_localctx = new ComparisonPredicateSomeContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 48; Match(SOME);
				State = 49; unqualified_comparison_predicate();
				}
				break;
			case ALL:
				_localctx = new ComparisonPredicateAllContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 50; Match(ALL);
				State = 51; unqualified_comparison_predicate();
				}
				break;
			case NONE:
				_localctx = new ComparisonPredicateNoneContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 52; Match(NONE);
				State = 53; unqualified_comparison_predicate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Unqualified_comparison_predicateContext : ParserRuleContext {
		public Unqualified_comparison_predicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unqualified_comparison_predicate; } }
	 
		public Unqualified_comparison_predicateContext() { }
		public virtual void CopyFrom(Unqualified_comparison_predicateContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class UnqualifiedComparisonPredicateContext : Unqualified_comparison_predicateContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public OperatorContext @operator() {
			return GetRuleContext<OperatorContext>(0);
		}
		public UnqualifiedComparisonPredicateContext(Unqualified_comparison_predicateContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterUnqualifiedComparisonPredicate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitUnqualifiedComparisonPredicate(this);
		}
	}

	[RuleVersion(0)]
	public Unqualified_comparison_predicateContext unqualified_comparison_predicate() {
		Unqualified_comparison_predicateContext _localctx = new Unqualified_comparison_predicateContext(Context, State);
		EnterRule(_localctx, 4, RULE_unqualified_comparison_predicate);
		try {
			_localctx = new UnqualifiedComparisonPredicateContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; expression(0);
			State = 57; @operator();
			State = 58; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperatorContext : ParserRuleContext {
		public OperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operator; } }
	 
		public OperatorContext() { }
		public virtual void CopyFrom(OperatorContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class OperatorOptionsContext : OperatorContext {
		public Operator_with_optionsContext operator_with_options() {
			return GetRuleContext<Operator_with_optionsContext>(0);
		}
		public OperatorOptionsContext(OperatorContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterOperatorOptions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitOperatorOptions(this);
		}
	}
	public partial class OperatorBetweenContext : OperatorContext {
		public ITerminalNode BETWEEN() { return GetToken(NSPredicateParser.BETWEEN, 0); }
		public OperatorBetweenContext(OperatorContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterOperatorBetween(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitOperatorBetween(this);
		}
	}

	[RuleVersion(0)]
	public OperatorContext @operator() {
		OperatorContext _localctx = new OperatorContext(Context, State);
		EnterRule(_localctx, 6, RULE_operator);
		try {
			State = 62;
			switch (TokenStream.La(1)) {
			case BETWEEN:
				_localctx = new OperatorBetweenContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 60; Match(BETWEEN);
				}
				break;
			case EQUAL:
			case NOT_EQUAL:
			case LESS_THAN:
			case GREATER_THAN:
			case LESS_THAN_OR_EQUAL:
			case GREATER_THAN_OR_EQUAL:
			case CONTAINS:
			case IN:
			case BEGINS_WITH:
			case ENDS_WITH:
			case LIKE:
			case MATCHES:
				_localctx = new OperatorOptionsContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 61; operator_with_options();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Operator_with_optionsContext : ParserRuleContext {
		public Operator_with_optionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operator_with_options; } }
	 
		public Operator_with_optionsContext() { }
		public virtual void CopyFrom(Operator_with_optionsContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class OperatorOptionsBareContext : Operator_with_optionsContext {
		public Operator_typeContext operator_type() {
			return GetRuleContext<Operator_typeContext>(0);
		}
		public OperatorOptionsBareContext(Operator_with_optionsContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterOperatorOptionsBare(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitOperatorOptionsBare(this);
		}
	}
	public partial class OperatorOptionsSpecifiedContext : Operator_with_optionsContext {
		public Operator_typeContext operator_type() {
			return GetRuleContext<Operator_typeContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(NSPredicateParser.IDENTIFIER, 0); }
		public OperatorOptionsSpecifiedContext(Operator_with_optionsContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.EnterOperatorOptionsSpecified(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INSPredicateListener typedListener = listener as INSPredicateListener;
			if (typedListener != null) typedListener.ExitOperatorOptionsSpecified(this);
		}
	}

	[RuleVersion(0)]
	public Operator_with_optionsContext operator_with_options() {
		Operator_with_optionsContext _localctx = new Operator_with_optionsContext(Context, State);
		EnterRule(_localctx, 8, RULE_operator_with_options);
		try {
			State = 70;
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				_localctx = new OperatorOptionsBareContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; operator_type();
				}
				break;
			case 2:
				_localctx = new OperatorOptionsSpecifiedContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; operator_type();
				State = 66; Match(T__2);
				State = 67; Match(IDENTIFIER);
				State = 68; Match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
